# amplitude-old

./: .gitignore  Cargo.toml  README.md  config.toml  package-lock.json  todo.md
.devcontainer/: devcontainer.json
.github/workflows/: courses.yml  rust.yml
.github/workflows  /: rust.yml
amplitude/: Cargo.toml
amplitude/src/: app.rs  database.rs  db.rs  error.rs  logger.rs  main.rs  misc.rs  runner.rs  session.rs  state.rs  watch.rs
amplitude/src/database/: auth.rs  misc.rs  mod.rs  session.rs  user.rs
amplitude/src/database/sql/auth/: create_users.sql  upsert_login.sql
amplitude/src/database/sql/auth/github/: create_oauth_state.sql  create_users.sql  delete_oauth.sql  upsert_login.sql
amplitude/src/database/sql/auth/google/: create_oauth_state.sql  create_users.sql  delete_oauth.sql  upsert_login.sql
amplitude/src/database/sql/class/: create_class.sql  create_user_class.sql
amplitude/src/database/sql/problems/: create_problems.sql  create_solutions.sql  get_completed_problems.sql  get_incomplete_problems.sql  load_problem.sql  upsert_problem.sql
amplitude/src/database/sql/session/: insert_sessions.sql
amplitude/src/routes/: article.rs  article_list.rs  category.rs  class.rs  course.rs  evaluate.rs  exercise.rs  item.rs  item_list.rs  list.rs  mod.rs  problem.rs  quiz.rs  test.rs  track.rs
amplitude/src/routes/auth/: logout.rs  logout_all.rs  mod.rs  session.rs  sessions.rs  supported.rs
amplitude/src/routes/auth/github/: complete.rs  mod.rs  redirect.rs
amplitude/src/routes/auth/google/: complete.rs  mod.rs  redirect.rs
amplitude/src/sql/: create_github_users.sql  create_google_users.sql  create_sessions.sql  insert_sessions.sql
amplitude/src/sql/auth/github/: create_users.sql  upsert_login.sql
amplitude/src/sql/auth/google/: create_users.sql  upsert_login.sql
amplitude_common/: Cargo.toml
amplitude_common/src/: config.rs  lang.rs  lib.rs  misc.rs  path.rs  state.rs  template_builder.rs
amplitude_common/src/state/: config.rs
amplitude_git/: Cargo.toml
amplitude_markdown/: Cargo.toml
amplitude_markdown/src/: course.rs  inject.rs  lib.rs  link_concat.rs  main.rs  parse.rs  path.rs  state.rs  util.rs  var_types.rs
amplitude_markdown/src/config/: article.rs  mod.rs
amplitude_markdown/src/inject/: admonition.rs  code.rs  info.rs  quiz.rs
amplitude_markdown/src/items/: article.rs  exercise.rs  mod.rs  project.rs  quiz.rs  track.rs  utils.rs
amplitude_markdown/src/parse/: context.rs  course.rs  inject.rs  link_concat.rs  md.rs  mod.rs  output.rs  track.rs
amplitude_markdown/src/parse/inject/: admonition.rs  code.rs  quiz.rs  utils.rs
amplitude_markdown/src/state/: article.rs  config.rs  course.rs  index.rs  mod.rs  quiz.rs
amplitude_runner/: Cargo.toml
amplitude_runner/src/: exercise.rs  lang.rs  lib.rs  main.rs  runner.rs  test_cases.rs  var_type.rs
amplitude_server/: Cargo.toml
amplitude_server/src/: logger.rs  main.rs  watch.rs
amplitude_server/src/routes/: article.rs  mod.rs  quiz.rs
amplitude_server/src/routes/auth/: mod.rs
amplitude_state/: Cargo.toml
amplitude_state/src/: db.rs  lib.rs  state.rs
amplitude_state/src/sql/: create_github_users.sql  create_google_users.sql  create_sessions.sql
amplitude_state/src/sql/auth/github/: create_oauth_state.sql  create_users.sql
amplitude_state/src/sql/auth/google/: create_users.sql
courses/testing/: a.md  b.md  config.toml  header.md  index.md
courses/testing/track_a/: a.md  b.md  index.md
langs/: build_images.rs  languages.json
langs/c/: run.sh
langs/java/: run.sh
langs/js/: run.sh
langs/python/: Dockerfile  generator.hbs  run.sh  template.hbs
languages/: languages.toml
languages/c/: Dockerfile
languages/cpp/: run.sh
languages/java/: Dockerfile
languages/js/: Dockerfile
languages/python/: Dockerfile  generator.hbs  run.sh  runner.hbs
languages/rust/: Cargo.toml  Dockerfile  run.sh
media/input/: header.md  test.md
parser/: Cargo.toml
parser/src/: lib.rs  link_concat.rs  parse.rs
parser/tests/: link_concat.rs
scripts/: add_admin.jl
src/: main.rs
tests/: link_concat.rs
web/: .prettierrc  index.html  jsconfig.json  package-lock.json  package.json  postcss.config.cjs  svelte.config.js  tailwind.config.cjs  tailwind.config.js  theme.ts  tsconfig.json  vite.config.js  vite.config.ts
web/old_src/: main.ts
web/old_src/pages/: Home.svelte  LoginTest.svelte
web/old_src/widgets/: Button.svelte
web/src/: App.svelte  NotFound.svelte  app.html  app.postcss  colors.scss  hooks.server.ts  main.ts  styles.scss  utilities.postcss  utils.scss
web/src/article/: Admonition.svelte  Article.svelte  Code.svelte  Explorer.svelte  ExplorerList.svelte  Outline.svelte  Quiz.svelte  article.ts  variables.scss
web/src/components/: Admonition.svelte  Article.svelte  Button.svelte  Code.svelte  Editor.svelte  EditorSettings.svelte  Modal.svelte  NavBar.svelte  Page.svelte  Quiz.svelte  Settings.svelte
web/src/components/article/: Admonition.svelte  Article.svelte  Code.svelte  Quiz.svelte
web/src/components/form/: Checkbox.svelte  FormElement.svelte  Input.svelte  InputGroup.svelte  StepSelect.svelte
web/src/components/modals/: CategoryInfo.svelte  EditorSettings.svelte  Login.svelte  Modal.svelte
web/src/lib/: fetch.ts  item.ts  settings.ts  stores.ts  toast.ts  util.ts  utils.ts
web/src/lib/components/: Button.svelte
web/src/lib/server/: auth.ts
web/src/pages/: Home.svelte  LoginTest.svelte
web/src/pages/article/: Article.svelte  Quiz.svelte
web/src/params/: course.ts
web/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte  +page.ts
web/src/routes/[category]/: +page.server.ts  +page.svelte
web/src/routes/[course=course]/: +page.server.ts  +page.svelte
web/src/routes/[course]/: +page.svelte
web/src/routes/categories/: +page.server.ts  +page.ts  (+2 more)
web/src/styles/: global.scss  mixins.scss  styles.scss  utils.scss  variables.scss
web/src/themes/: base.postcss  colors.postcss  cool.postcss
web/src/widgets/: Box.svelte  Button.svelte  Icon.svelte  Redirecting.svelte
web/templates/: article.html
(+45 files in other folders)
