[package]
name = "amplitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplitude_markdown = { path = "amplitude_markdown" }
pulldown-cmark = "0.9.2"

[workspace]
members = [
    "amplitude_markdown"
]
