[package]
name = "amplitude"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplitude_markdown = { path = "amplitude_markdown" }
clap = { version = "4.1.13", features = ["derive"] }
pulldown-cmark = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[workspace]
members = [
    "amplitude_markdown"
]
