[package]
name = "amplitude"
version = "0.1.0"
edition = "2021"
default-run = "amplitude"

[dependencies]
# afire = { version = "2.0.0", features = ["extensions", "tracing"] }
afire = { git = "https://github.com/Basicprogrammer10/afire", branch = "dev", default-features = false, features = [
    "extensions",
    "tracing",
] }
amplitude_markdown = { path = "../amplitude_markdown" }
pulldown-cmark = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
amplitude_common = { path = "../amplitude_common" }
serde_json = "1.0.95"
serde = "1.0.159"
derive_more = "0.99.17"
# anyhow = "1.0.70"
