[package]
name = "amplitude"
version = "0.1.0"
edition = "2021"
default-run = "amplitude"

[dependencies]
amplitude_markdown = { path = "../amplitude_markdown" }

afire = { version = "2.0.0", default-features = false, features = [
    "extensions",
    "tracing",
] }
pulldown-cmark = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
amplitude_common = { path = "../amplitude_common" }
serde_json = "1.0.95"
serde = "1.0.159"
derive_more = "0.99.17"
rusqlite = { version = "0.29.0", features = ["bundled"] }
toml = "0.7.3"
parking_lot = "0.12.1"
anyhow = "1.0.70"
ctrlc = "3.2.5"
rand = "0.8.5"
ureq = "2.6.2"
tempfile = "3.5.0"
