[package]
name = "amplitude_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
tracing = "0.1.37"
serde = "1.0.159"
comrak = { git = "https://github.com/aspiringLich/comrak.git" }
toml = "0.7.3"
