[package]
name = "amplitude_markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "5.1.0"
pulldown-cmark = "0.9.2"
tracing = "0.1.37"
amplitude_common = { path = "../amplitude_common" }
anyhow = "1.0.70"
ctor = "0.2.0"
toml = "0.7.3"
serde = { version = "1.0.158", features = ["derive"] }
marksman_escape = "0.1.2"
