[package]
name = "amplitude_markdown"
version = "0.1.0"
edition = "2021"

[dependencies]
amplitude_common = { path = "../amplitude_common" }
tracing = "0.1.37"
anyhow = { version = "1.0.70", features = ["backtrace"] }
ctor = "0.2.0"
toml = "0.7.3"
serde = { version = "1.0.158", features = ["derive"] }
marksman_escape = "0.1.2"
comrak = { git = "https://github.com/aspiringLich/comrak.git" }
parking_lot = "0.12.1"
