[package]
name = "amplitude_markdown"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "amplitude_markdown"

[dependencies]
amplitude_common = { path = "../amplitude_common" }
amplitude_runner = { path = "../amplitude_runner" }

tracing = "0.1.37"
tracing-subscriber = "0.3.17"
anyhow = { version = "1.0.70", features = ["backtrace"] }
ctor = "0.2.0"
toml = "0.7.3"
serde = { version = "1.0.158", features = ["derive"] }
marksman_escape = "0.1.2"
comrak = { git = "https://github.com/aspiringLich/comrak.git" }
parking_lot = "0.12.1"
chrono = "0.4.24"
ureq = "2.6.2"
git2 = "0.17.1"
enum-iterator = "1.4.1"
