[package]
name = "amplitude_runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amplitude_common = { path = "../amplitude_common" }

anyhow = { version = "1.0.70", features = ["backtrace"] }
enum-iterator = "1.4.1"
serde = { version = "1.0.158", features = ["derive"] }
tempfile = "3.5.0"
handlebars = "4.3.7"
toml = "0.7.3"
bollard = "0.14.0"
futures = "0.3"
tokio = { version = "1.28.2", features = ["macros"] }
